tools/tests/errors/bool_dunder_return_integer.experr
_bool_ must return a Bool
